creación de getToken action para pruebas con el versionamiento de la api

--- a/locales/en.json
+++ b/locales/en.json
@@ -80,5 +80,45 @@
 	"!                            ^^^": "!                            ^^^",
 	"Cannot shut down actionhero, not running": "Cannot shut down actionhero, not running",
 	"yJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOjEsImlhdCI6MTQ2MzMzMzM2MCwiZXhwIjoxNDY0NjI5MzYwfQ.CLFviuxMvSRx4E4SvARhF-Q-Kz80DBXnCsyGsYI2p0k": "yJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOjEsImlhdCI6MTQ2MzMzMzM2MCwiZXhwIjoxNDY0NjI5MzYwfQ.CLFviuxMvSRx4E4SvARhF-Q-Kz80DBXnCsyGsYI2p0k",
-	"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOjEsImlhdCI6MTQ2MzMzMzk2MiwiZXhwIjoxNDY0NjI5OTYyfQ.ku2SzpbgKJGRWz76QUKCFPbPkO3xmIZNReb1gy82pmI": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOjEsImlhdCI6MTQ2MzMzMzk2MiwiZXhwIjoxNDY0NjI5OTYyfQ.ku2SzpbgKJGRWz76QUKCFPbPkO3xmIZNReb1gy82pmI"
+	"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOjEsImlhdCI6MTQ2MzMzMzk2MiwiZXhwIjoxNDY0NjI5OTYyfQ.ku2SzpbgKJGRWz76QUKCFPbPkO3xmIZNReb1gy82pmI": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOjEsImlhdCI6MTQ2MzMzMzk2MiwiZXhwIjoxNDY0NjI5OTYyfQ.ku2SzpbgKJGRWz76QUKCFPbPkO3xmIZNReb1gy82pmI",
+	"task %sloaded: %s, %s": "task %sloaded: %s, %s",
+	"resque scheduler started": "resque scheduler started",
+	"enqueuing periodic task: %s": "enqueuing periodic task: %s",
+	"resque scheduler polling": "resque scheduler polling",
+	"resque scheduler ended": "resque scheduler ended",
+	"*** checked for worker status: %s (event loop delay: %sms)": "*** checked for worker status: %s (event loop delay: %sms)",
+	"worker: started": "worker: started",
+	"worker: polling %s": "worker: polling %s",
+	"worker: working job %s": "worker: working job %s",
+	"Hello!": "Hello!",
+	"re-enqueued recurrent job %s": "re-enqueued recurrent job %s",
+	"! uncaught error from task: task:ejemploTask on queue default (worker #undefined)": "! uncaught error from task: task:ejemploTask on queue default (worker #undefined)",
+	"!     arguments: [{}]": "!     arguments: [{}]",
+	"! Error: true": "! Error: true",
+	"!     at Array.consoleReporter (/home/tamyg/Documentos/testMongoAPIAH/node_modules/actionhero/initializers/exceptions.js:49:17)": "!     at Array.consoleReporter (/home/tamyg/Documentos/testMongoAPIAH/node_modules/actionhero/initializers/exceptions.js:49:17)",
+	"!     at Object.api.exceptionHandlers.report (/home/tamyg/Documentos/testMongoAPIAH/node_modules/actionhero/initializers/exceptions.js:63:43)": "!     at Object.api.exceptionHandlers.report (/home/tamyg/Documentos/testMongoAPIAH/node_modules/actionhero/initializers/exceptions.js:63:43)",
+	"!     at Object.api.exceptionHandlers.task (/home/tamyg/Documentos/testMongoAPIAH/node_modules/actionhero/initializers/exceptions.js:97:29)": "!     at Object.api.exceptionHandlers.task (/home/tamyg/Documentos/testMongoAPIAH/node_modules/actionhero/initializers/exceptions.js:97:29)",
+	"!     at null.<anonymous> (/home/tamyg/Documentos/testMongoAPIAH/node_modules/actionhero/initializers/resque.js:88:113)": "!     at null.<anonymous> (/home/tamyg/Documentos/testMongoAPIAH/node_modules/actionhero/initializers/resque.js:88:113)",
+	"!     at emit (events.js:118:17)": "!     at emit (events.js:118:17)",
+	"!     at null.<anonymous> (/home/tamyg/Documentos/testMongoAPIAH/node_modules/node-resque/lib/multiWorker.js:83:68)": "!     at null.<anonymous> (/home/tamyg/Documentos/testMongoAPIAH/node_modules/node-resque/lib/multiWorker.js:83:68)",
+	"!     at /home/tamyg/Documentos/testMongoAPIAH/node_modules/node-resque/lib/worker.js:243:10": "!     at /home/tamyg/Documentos/testMongoAPIAH/node_modules/node-resque/lib/worker.js:243:10",
+	"!     at /home/tamyg/Documentos/testMongoAPIAH/node_modules/fakeredis/main.js:184:5": "!     at /home/tamyg/Documentos/testMongoAPIAH/node_modules/fakeredis/main.js:184:5",
+	"!     at null._onTimeout (/home/tamyg/Documentos/testMongoAPIAH/node_modules/fakeredis/lib/connection.js:343:18)": "!     at null._onTimeout (/home/tamyg/Documentos/testMongoAPIAH/node_modules/fakeredis/lib/connection.js:343:18)",
+	"!     at Timer.listOnTimeout (timers.js:110:15)": "!     at Timer.listOnTimeout (timers.js:110:15)",
+	"worker: paused": "worker: paused",
+	"resque scheduler working timestamp %s": "resque scheduler working timestamp %s",
+	"resque scheduler enqueuing job %s": "resque scheduler enqueuing job %s",
+	"worker: ended": "worker: ended",
+	"task workers stopped": "task workers stopped",
+	"hola mundo": "hola mundo",
+	"worker: job success %s": "worker: job success %s",
+	"goodbye": "goodbye",
+	"version2 del getToken": "version2 del getToken",
+	"! /home/tamyg/Documentos/testMongoAPIAH/actions/getToken.js:41": "! /home/tamyg/Documentos/testMongoAPIAH/actions/getToken.js:41",
+	"!     next();": "!     next();",
+	"!     ^^^^": "!     ^^^^",
+	"! SyntaxError: Unexpected identifier": "! SyntaxError: Unexpected identifier",
+	"!     at /home/tamyg/Documentos/testMongoAPIAH/node_modules/actionhero/initializers/actions.js:70:21": "!     at /home/tamyg/Documentos/testMongoAPIAH/node_modules/actionhero/initializers/actions.js:70:21",
+	"!     at /home/tamyg/Documentos/testMongoAPIAH/node_modules/actionhero/initializers/config.js:49:15": "!     at /home/tamyg/Documentos/testMongoAPIAH/node_modules/actionhero/initializers/config.js:49:15",
+	"!     at process._tickDomainCallback (node.js:381:11)": "!     at process._tickDomainCallback (node.js:381:11)"
 }
